--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -49,7 +49,7 @@ Email: jvillasenor@bren.ucsb.edu (JCVD) \
 
 **Abstract**
 
-Marine reserves are often implemented to preserve habitat, recover overfished stocks, and secure livelihoods of coastal communities. As with any other management interventions, we need to better understand their effectiveness and impacts on coastal communities and the environment. To date, the evaluation of the reserves largely relies on analysing ecological data, ignoring socioeconomic and governance dimensions. In absence of a standardized methodology, existing data is analyzed in different ways, hindering the ability to compare results across case studies. We present a framework and tool to evaluate the effectiveness of marine reserves by matching 7 commonly stated management objectives to a set of 9 biophysical, 5 socioeconomic, and 14 governance indicators. We provide guidelines on how to properly colet data that can then be analysied with standardized methods Biophysical indicators are evaluated with causal inference techniques, using a counterfactual approach, to measure the net effect of the reserve on each indicator. Linear regression models are fitted to socioeconomic indicators through time, testing for the differences before and after the implementation of the reserve. Governance indicators are quantitatively analyzed based on literature, identifying common governance structures and their associated effectiveness. To make the framework accessible to fishers and decision makers, and allow replication of results, we developed an open source, web-based Marine Reserve Evaluation App (MAREA). Together, this framework and MAREA represent a major step in marine reserve evaluation that can furhter our understanding and simplify our management of marine reserves. 
+Marine reserves are often implemented to preserve habitat, recover overfished stocks, and secure livelihoods of coastal communities. As with any other management interventions, we need to better understand their effectiveness and impacts on coastal communities and the environment. To date, the evaluation of these reserves largely relies on analyzing ecological data, often ignoring socioeconomic and governance dimensions. Existing data are analyzed in different ways, hindering the ability to compare results across case studies. Moreover, analysis and evaluation of reserves is generally conducted by academic scientists, not the reserves managers and users, thereby hindering effective local management and rapid response to change. We present a framework and tool to evaluate the effectiveness of marine reserves by matching seven commonly stated management objectives to nine biological, five socioeconomic, and 14 governance indicators. We provide guidelines on how to properly collect data that can then be analyzed with standardized method. Biological indicators are evaluated with causal inference techniques, using a counterfactual approach, to assess the net effect of the reserve on each indicator. Linear regression models are fitted to socioeconomic indicators through time to test for differences before and after reserve implementation. Governance indicators are qualitatively analyzed using a framework developed through a literature review which identifies common governance structures and their associated effectiveness. To make the framework accessible to fishers and decision makers, and allow replication of results, we developed the open source, web-based Marine Reserve Evaluation App (MAREA). Together, this new framework and MAREA can further our understanding and support management of marine reserves. 
 
 ```{r load packages}
 suppressPackageStartupMessages({
